- doplnené prekladové reťazce do modulu Roles - drobné úpravy v zobrazení

--- a/source/app/locale/eng/LC_MESSAGES/default.po
+++ b/source/app/locale/eng/LC_MESSAGES/default.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Team Project 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-04-29 01:58+0100\n"
-"PO-Revision-Date: 2008-04-29 02:04+0100\n"
+"POT-Creation-Date: 2008-05-01 13:15+0100\n"
+"PO-Revision-Date: 2008-05-01 13:17+0100\n"
 "Last-Translator: Bc. Jozef Hergott <joeh@inmail.sk>\n"
 "Language-Team: AAteam <aateam@websity.sk>\n"
 "MIME-Version: 1.0\n"
@@ -525,7 +525,7 @@ msgstr "Language"
 
 # C:\Inetpub\htdocs\tp\src\app/views/layouts/default.thtml:97
 #: C:\Users\Jojo\webroot\alumni\app/views/alumni/myprofile.ctp:151
-#: C:\Users\Jojo\webroot\alumni\app/views/alumni/myprofile.ctp:208
+#: C:\Users\Jojo\webroot\alumni\app/views/alumni/myprofile.ctp:207
 msgid "ALUMNI_MYPROFILE_LANGUAGE_DELETE"
 msgstr "Delete"
 
@@ -922,12 +922,12 @@ msgid "MAIL_SETTINGS_FORWARD_MAIL_DESCR"
 msgstr "For forwarding your local mails to your global e-mail, please fill your e-mail address here."
 
 # C:\Inetpub\htdocs\tp\src\app/views/mails/settings.ctp:2
-#: C:\Users\Jojo\webroot\alumni\app/views/mails/settings.ctp:13
+#: C:\Users\Jojo\webroot\alumni\app/views/mails/settings.ctp:12
 msgid "MAIL_SETTINGS_LISTING"
 msgstr "Count of displayed mail rows"
 
 # C:\Inetpub\htdocs\tp\src\app/views/mails/settings.ctp:10
-#: C:\Users\Jojo\webroot\alumni\app/views/mails/settings.ctp:29
+#: C:\Users\Jojo\webroot\alumni\app/views/mails/settings.ctp:28
 msgid "MAIL_SETTINGS_SUBMIT"
 msgstr "Save settings"
 
@@ -1009,6 +1009,32 @@ msgstr "Actualities"
 #: C:\Users\Jojo\webroot\alumni\app/views/posts/index.ctp:5
 msgid "NEWS_ADDED"
 msgstr "Added"
+
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:1
+msgid "ROLES_ADD_ITEM"
+msgstr "Add new role"
+
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:5
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:22
+msgid "ROLES_NAME"
+msgstr "Role name"
+
+# C:\Inetpub\htdocs\tp\src\app/views/alumni/profile.ctp:45
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:11
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:23
+msgid "ROLES_DESCRIPTION"
+msgstr "Role description"
+
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:17
+msgid "ROLES_CLEARANCES"
+msgstr "Clearances"
+
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:35
+msgid "ROLES_CREATE"
+msgstr "Create"
 
 # C:\Inetpub\htdocs\tp\src\app/views/roles/edit.ctp:1
 # C:\Inetpub\htdocs\tp\src\app/views/roles/edit.ctp:2
@@ -1405,8 +1431,9 @@ msgid "PROFESSIONS_DELETE"
 msgstr "Delete"
 
 #: C:\Users\Jojo\webroot\alumni\app/views/stats/add.thtml:3
-msgid "STATS_PRINTOUT"
-msgstr "Statistics printout"
+#: C:\Users\Jojo\webroot\alumni\app/views/stats/index.thtml:3
+msgid "STATS_ADD_ITEM"
+msgstr "Add new statistic"
 
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/stats/add.thtml:6
@@ -1441,10 +1468,6 @@ msgstr "Edit statistic"
 msgid "STATS_MANAGEMENT"
 msgstr "Statistics Management"
 
-#: C:\Users\Jojo\webroot\alumni\app/views/stats/index.thtml:3
-msgid "STATS_ADD_ITEM"
-msgstr "Add new statistic"
-
 #: C:\Users\Jojo\webroot\alumni\app/views/stats/index.thtml:4
 #: C:\Users\Jojo\webroot\alumni\app/views/stats/select.thtml:1
 msgid "STATS_LIST"
@@ -1472,7 +1495,7 @@ msgstr "Delete"
 msgid "STATS_SELECT_ITEM"
 msgstr "Select desired statistics"
 
-#: C:\Users\Jojo\webroot\alumni\app/views/stats/select.thtml:6
+#: C:\Users\Jojo\webroot\alumni\app/views/stats/select.thtml:10
 msgid "STATS_GENERATE_XLS"
 msgstr "Generate .xls file"
 
@@ -1910,6 +1933,9 @@ msgstr "List of old posters"
 #: C:\Users\Jojo\webroot\alumni\app/views/wall_posters/viewold.thtml:23
 msgid "WALL_POSTERS_HEADING3_NO_OLD_POSTERS"
 msgstr "There are no old posters"
+
+#~ msgid "STATS_PRINTOUT"
+#~ msgstr "Statistics printout"
 
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #~ msgid "LANGUAGES_SAVE_ITEM"
