--- a/source/app/locale/slo/LC_MESSAGES/default.po
+++ b/source/app/locale/slo/LC_MESSAGES/default.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Team Project 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-05-01 13:15+0100\n"
-"PO-Revision-Date: 2008-05-01 13:16+0100\n"
+"POT-Creation-Date: 2008-05-01 23:52+0100\n"
+"PO-Revision-Date: 2008-05-01 23:53+0100\n"
 "Last-Translator: Bc. Jozef Hergott <joeh@inmail.sk>\n"
 "Language-Team: AATeam <aateam@websity.sk>\n"
 "MIME-Version: 1.0\n"
@@ -1015,43 +1015,78 @@ msgstr "Pridané"
 
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:2
 msgid "ROLES_ADD_ITEM"
 msgstr "Pridanie novej role"
 
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:5
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:22
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:5
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:22
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:7
 msgid "ROLES_NAME"
 msgstr "Názov role"
 
 # C:\Inetpub\htdocs\tp\src\app/views/layouts/default.thtml:97
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:11
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:23
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:11
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:23
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:8
 msgid "ROLES_DESCRIPTION"
 msgstr "Popis role"
 
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:17
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:17
 msgid "ROLES_CLEARANCES"
 msgstr "Oprávnenia"
 
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/create.ctp:35
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:23
 msgid "ROLES_CREATE"
-msgstr "Vytvoriť"
+msgstr "Vytvoriť novú rolu"
 
-# C:\Inetpub\htdocs\tp\src\app/views/roles/edit.ctp:1
-# C:\Inetpub\htdocs\tp\src\app/views/roles/edit.ctp:2
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:2
-msgid "Edit role"
+msgid "ROLES_EDIT_ITEM"
 msgstr "Upraviť rolu"
 
-# C:\Inetpub\htdocs\tp\src\app/views/layouts/default.thtml:89
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:35
+msgid "ROLES_SAVE"
+msgstr "Upraviť"
+
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/edit.ctp:35
+msgid "ROLES_BACK_TO_LIST"
+msgstr "Späť na zoznam"
+
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:2
-#: C:\Users\Jojo\webroot\alumni\app/views/layouts/default.thtml:91
-msgid "MENU_SPRAVA_PRAV"
-msgstr "Správa práv"
+msgid "ROLES_MANAGEMENT"
+msgstr "Správa používateľských práv"
+
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:4
+msgid "ROLES_LIST"
+msgstr "Zoznam všetkých vytvorených prístupových rolí"
+
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:9
+msgid "ROLES_ACTIONS"
+msgstr "Akcie"
+
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:16
+msgid "ROLES_DELETE"
+msgstr "Zmazať"
+
+# C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
+#: C:\Users\Jojo\webroot\alumni\app/views/roles/index.ctp:17
+msgid "ROLES_EDIT"
+msgstr "Upraviť"
 
 # C:\Inetpub\htdocs\tp\src\app/views/layouts/default.thtml:88
 #: C:\Users\Jojo\webroot\alumni\app/views/users/edit.ctp:1
@@ -1268,6 +1303,11 @@ msgstr "Admin Menu"
 #: C:\Users\Jojo\webroot\alumni\app/views/layouts/default.thtml:88
 msgid "MENU_SPRAVA_AKTUALIT"
 msgstr "Správa aktualít"
+
+# C:\Inetpub\htdocs\tp\src\app/views/layouts/default.thtml:89
+#: C:\Users\Jojo\webroot\alumni\app/views/layouts/default.thtml:91
+msgid "MENU_SPRAVA_PRAV"
+msgstr "Správa práv"
 
 # C:\Inetpub\htdocs\tp\src\app/views/layouts/default.thtml:75
 #: C:\Users\Jojo\webroot\alumni\app/views/layouts/default.thtml:96
@@ -1966,13 +2006,16 @@ msgstr "Staré oznamy nástenky"
 msgid "WALL_POSTERS_HEADING3_NO_OLD_POSTERS"
 msgstr "Žiadne staré oznamy"
 
+# C:\Inetpub\htdocs\tp\src\app/views/roles/edit.ctp:1
+# C:\Inetpub\htdocs\tp\src\app/views/roles/edit.ctp:2
+#~ msgid "Edit role"
+#~ msgstr "Upraviť rolu"
 #~ msgid "STATS_PRINTOUT"
 #~ msgstr "Výpis štatistík"
 #~ msgid "UPRAVIT"
 #~ msgstr "Upraviť"
 #~ msgid "ZMAZAT"
 #~ msgstr "Zmazať"
-
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #~ msgid "LANGUAGES_SAVE_ITEM"
 #~ msgstr "Uložiť"
